--- a/app/src/main/res/layout/products_list_item.xml
+++ b/app/src/main/res/layout/products_list_item.xml
@@ -57,6 +57,7 @@
 
     <TextView
         android:id="@+id/brandName"
+        android:transitionName="brandName"
         android:textStyle="bold"
         android:textSize="16dp"
         android:layout_margin="5dp"
@@ -65,6 +66,7 @@
 
     <TextView
         android:id="@+id/productName"
+        android:transitionName="productName"
         android:textSize="14dp"
         android:singleLine="true"
         android:layout_margin="5dp"
