AddToCart animation along with share animation
Add to cart module done along with some part of the share module.

--- a/app/src/main/res/menu/menu_search.xml
+++ b/app/src/main/res/menu/menu_search.xml
@@ -3,8 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.zappos.raakeshpremkumar.ilovezappos.SearchActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_share"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:icon="@drawable/share"
+        app:showAsAction="always" />
+
 </menu>
