--- a/app/src/main/res/layout/content_product.xml
+++ b/app/src/main/res/layout/content_product.xml
@@ -117,7 +117,8 @@
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentEnd="true"
                 android:layout_margin="@dimen/fab_margin"
-                app:srcCompat="@android:drawable/ic_dialog_email" />
+                android:backgroundTint="@color/green"
+                android:tint="@color/white"/>
 
         </RelativeLayout>
     </android.support.design.widget.CoordinatorLayout>
