--- a/app/src/main/res/layout/content_product.xml
+++ b/app/src/main/res/layout/content_product.xml
@@ -14,112 +14,129 @@
         android:fitsSystemWindows="true"
         tools:context="com.zappos.raakeshpremkumar.ilovezappos.ProductActivity">
 
-        <RelativeLayout
-            android:id="@+id/content_product"
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            tools:context="com.zappos.raakeshpremkumar.ilovezappos.ProductActivity">
-
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                app:title="@string/app_name"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
-                android:titleTextColor="@color/white"
-                android:theme="@style/AppTheme.AppBarOverlay"
-                app:popupTheme="@style/AppTheme.PopupOverlay" />
-
-            <ImageView
-                android:id="@+id/productImage"
-                android:transitionName="productImageTransition"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/toolbar"
-                android:background="@mipmap/zapposmobile"
-                app:image_url="@{productPojo.thumbnailImageUrl}"/>
+            android:layout_height="fill_parent"
+            android:fillViewport="true">
 
             <RelativeLayout
-                android:id="@+id/brandNameLayout"
-                android:layout_below="@+id/productImage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:orientation="horizontal">
+                android:id="@+id/content_product"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                tools:context="com.zappos.raakeshpremkumar.ilovezappos.ProductActivity">
 
-                <TextView
-                    android:id="@+id/brandName"
-                    android:transitionName="brandName"
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/toolbar"
+                    app:title="@string/app_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    android:background="?attr/colorPrimary"
+                    android:titleTextColor="@color/white"
+                    android:theme="@style/AppTheme.AppBarOverlay"
+                    app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+                <RelativeLayout
+                    android:id="@+id/productImageTransitionLayout"
+                    android:layout_below="@+id/toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <ImageView
+                        android:id="@+id/productImage"
+                        android:transitionName="productImageTransition"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@mipmap/zapposmobile"
+                        app:image_url="@{productPojo.thumbnailImageUrl}"/>
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/brandNameLayout"
+                    android:layout_below="@+id/productImageTransitionLayout"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textStyle="bold"
-                    android:textSize="25dp"
-                    android:maxLength="10"
-                    android:text="@={productPojo.brandName}"/>
+                    android:padding="5dp"
+                    android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/priceAfter"
+                    <TextView
+                        android:id="@+id/brandName"
+                        android:transitionName="brandName"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textStyle="bold"
+                        android:textSize="25dp"
+                        android:maxLength="10"
+                        android:text="@={productPojo.brandName}"/>
+
+                    <TextView
+                        android:id="@+id/priceAfter"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textStyle="bold"
+                        android:textSize="25dp"
+                        android:textColor="@color/green"
+                        android:layout_alignParentRight="true"
+                        android:text="@={productPojo.price}"/>
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/productNameLayout"
+                    android:layout_below="@+id/brandNameLayout"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textStyle="bold"
-                    android:textSize="25dp"
-                    android:textColor="@color/green"
-                    android:layout_alignParentRight="true"
-                    android:text="@={productPojo.price}"/>
+                    android:padding="5dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/productName"
+                        android:transitionName="productName"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@={productPojo.productName}"/>
+
+                    <TextView
+                        android:id="@+id/priceBefore"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:text="@={productPojo.originalPrice}"/>
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_below="@+id/productNameLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="5dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:text="@={productPojo.percentOff}"
+                        android:textSize="18dp" />
+
+                </RelativeLayout>
 
             </RelativeLayout>
 
-            <RelativeLayout
-                android:id="@+id/productNameLayout"
-                android:layout_below="@+id/brandNameLayout"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:orientation="horizontal">
+        </ScrollView>
 
-                <TextView
-                    android:id="@+id/productName"
-                    android:transitionName="productName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@={productPojo.productName}"/>
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|bottom"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_margin="@dimen/fab_margin"
+            android:backgroundTint="@color/green"
+            android:tint="@color/white"/>
 
-                <TextView
-                    android:id="@+id/priceBefore"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:text="@={productPojo.originalPrice}"/>
-
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_below="@+id/productNameLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:text="@={productPojo.percentOff}"
-                    android:textSize="18dp" />
-
-            </RelativeLayout>
-
-            <android.support.design.widget.FloatingActionButton
-                android:id="@+id/fab"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentEnd="true"
-                android:layout_margin="@dimen/fab_margin"
-                android:backgroundTint="@color/green"
-                android:tint="@color/white"/>
-
-        </RelativeLayout>
     </android.support.design.widget.CoordinatorLayout>
+
 </layout>
