--- a/app/src/main/res/layout/content_search.xml
+++ b/app/src/main/res/layout/content_search.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/content_search"
@@ -9,14 +9,17 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="horizontal"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.zappos.raakeshpremkumar.ilovezappos.SearchActivity"
-    tools:showIn="@layout/activity_search">
+    tools:showIn="@layout/activity_search"
+    android:weightSum="5">
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/text_input_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_weight="4">
 
         <EditText
             android:id="@+id/searchEditText"
@@ -29,5 +32,13 @@
 
     </android.support.design.widget.TextInputLayout>
 
+    <ImageView
+        android:id="@+id/clearButton"
+        android:src="@drawable/clear"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:tint="@color/red"
+        android:layout_gravity="end"
+        android:layout_weight="1"/>
 
-</RelativeLayout>
+</LinearLayout>
