Similar items Module Build
Display similar items in product page and have written callbacks from
retrofit api response appropriately.

--- a/app/src/main/res/layout/content_product.xml
+++ b/app/src/main/res/layout/content_product.xml
@@ -9,6 +9,7 @@
     <android.support.design.widget.CoordinatorLayout
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/rootView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
@@ -107,6 +108,7 @@
                 </RelativeLayout>
 
                 <RelativeLayout
+                    android:id="@+id/percentoffparent"
                     android:layout_below="@+id/productNameLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -121,6 +123,22 @@
                         android:textSize="18dp" />
 
                 </RelativeLayout>
+
+                <android.support.v7.widget.RecyclerView
+                    android:layout_below="@+id/percentoffparent"
+                    android:id="@+id/similarProducts"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:background="@color/light_grey"
+                    app:layoutManager="android.support.v7.widget.LinearLayoutManager">
+
+                </android.support.v7.widget.RecyclerView>
+                
+                <View
+                    android:layout_below="@+id/similarProducts"
+                    android:layout_width="wrap_content"
+                    android:layout_height="80dp"></View>
 
             </RelativeLayout>
 
