--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#00897B</color>
     <color name="colorPrimaryDark">#009688</color>
-    <color name="colorAccent">#66BB6A</color>
+    <color name="colorAccent">#00897B</color>
 
     <color name="red">#D50000</color>
     <color name="light_grey">#D3D3D3</color>
