--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -46,6 +46,7 @@
 
             <FrameLayout
                 android:id="@+id/noInternetConnectivity"
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
