Shopping cart module
Have added a shopping cart activity tracking and showing all the items
added so far thereby letting the user edit it.

--- a/app/src/main/res/layout/content_product.xml
+++ b/app/src/main/res/layout/content_product.xml
@@ -48,7 +48,7 @@
                         android:transitionName="productImageTransition"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@mipmap/zapposmobile"
+                        android:background="@mipmap/zapposmobileproduct"
                         app:image_url="@{productPojo.thumbnailImageUrl}"/>
 
                 </RelativeLayout>
