--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFF</color>
     <color name="blue">#1565C0</color>
     <color name="green">#00897B</color>
+    <color name="lightwhite">#FFFAF0</color>
 </resources>
